fix: convert remaining ::: directives and fix malformed aside elements
- Convert 550+ remaining ::: directives across 62 files
- Handle both ::type[label] and ::type text syntax
- Handle inline directives (:::note text :::)
- Fix 671 files with malformed aside elements (remove aria-label and <p> tags)
- Fix 3 files with directives without closing :::